# medirag-pro

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  Dockerfile.spaces  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.monitoring.yml  docker-compose.vps.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: deployment.md
evaluation/: golden_test_set.json
frontend/: app.py
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml  medirag_overview.json
nginx/: nginx.conf
scripts/: benchmark.py  init_db.sql
src/: config.py  logging_config.py  models.py
src/api/: limiter.py  main.py  schemas.py
src/api/routes/: chat.py  feedback.py  health.py  ingest.py
src/cache/: semantic_cache.py
src/evaluation/: ragas_eval.py
src/generation/: llm.py
src/guardrails/: emergency.py  safety.py
src/ingestion/: chunker.py  loader.py
src/memory/: session.py
src/pipeline/: ingest_pipeline.py  query_pipeline.py
src/retrieval/: bm25_store.py  embedder.py  hybrid.py  parent_store.py  qdrant_store.py  reranker.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
